feat(bookings): enforce booking lifecycle and operational safeguards